# Kite

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/kite/: buffer_sizes.h  config.h  kt_buffer_sizes.h  kt_config.h  kt_main.h  kt_messages.h  kt_util.h  main.h  messages.h  opcodes.h  util.h
include/kite_inline_util/: communication_utility.h  generic_util.h  kite_config_util.h  kite_debug_util.h  kite_inline_util.h  kt_communication_utility.h  kt_config_util.h  kt_debug_util.h  kt_generic_util.h  kt_inline_util.h  kt_kvs_util.h  kt_paxos_generic_util.h  kt_paxos_util.h  kt_reserve_stations_util.h  kvs_util.h  paxos_generic_util.h  reserve_stations_util.h
src/PaxosVerifier/: PaxosVerifier.cpp
src/kite/: kt_stats.c  kt_util.c  main.c  run-kite.sh  stats.c  util.c  worker.c
